# kodepos

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  Kodepos.paw
api/: Cargo.toml
api/src/: error.rs  main.rs  state.rs
api/src/dto/: request.rs  response.rs
api/src/enums/: search.rs
api/src/routes/: about.rs  administrative_area_list.rs  error_404.rs  mod.rs
app/: Cargo.toml
app/src/: cmd_populate.rs
cli/: Cargo.toml
cli/src/: cmd_populate.rs  data_structure.rs  main.rs
entity/: Cargo.toml
entity/src/enums/: administrative_level.rs  mod.rs
entity/src/models/: administrative_area.rs  mod.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: cmd_populate.rs  data_structure.rs  main.rs
src/model/: administrative_area.rs  mod.rs
