[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenvy = "0.15.7"
sea-orm = { version = "1.0.0", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tower = "0.5.0"

entity = { path = "../entity" }
