[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.0.0", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }

entity = { path = "../entity" }
